get basic event results api working
